(mew) got carousel working on reg page

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -17,7 +17,7 @@
             <form method="post" action="/petition">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                 <div class="sig-div">
-                    <label for="signature">Become part of the locavor movement! <br>Sign below to show your commitment to local eating: </label>
+                    <p>Become part of the locavor movement! <br>Sign below to show your commitment to local eating: </p>
                     <input type="hidden" name="signature" id="signature">
 
                     <section>
