--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,12 +1,12 @@
 <div class="profile">
     <figure>
-        <img src="/img/anne-preble-198119.jpg" alt="fried chicken head">
+        <img src="/img/arnaldo-aldana-203173.jpg" alt="fried chicken head">
     </figure>
     <p class="error">{{#if error}}
         There was a problem with your form. Please try again.
         {{/if}}
     </p>
-    <p>Tell us a little about yourself: </p>
+    <p>We are all special cabbages. Tell us a little about yourself: </p>
     <form method="post" action="/profile">
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <div class="inputs profile">
