--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,7 @@ li {
 
 figure,
 #carousel {
-	top: 0px;
+	top: 40px;
 	left: 0px;
     margin: 0 auto;
     text-align: center;
@@ -124,7 +124,7 @@ figure,
 .food {
     position: absolute;
     left: 0;
-	top: 40px;
+	top: 0;
 	width: 100%;
     height: 50vh;
     transform: translateX(100%);
