(mew) clearing sig from input so it doesn't get saved after user clears sig

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,6 +233,10 @@ figure.signature > img {
 	width: 100%;
 }
 
+.thanks figure.signature {
+    border: none;
+}
+
 .error {
 	font-family: 'Bungee', Arial, sans-serif;
 	font-size: 18px;
