--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,6 +1,6 @@
 <div class="signees">
 
-    <figure>
+    <figure class="top-fig">
         <img src="/img/clark-young-135152.jpg" alt="farm pic">
     </figure>
     <h2>We, residents of {{cityName}}, pledge to eat local!</h2>
