--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,7 +3,7 @@
         <p class="error">{{#if thiswillneverdisplay}}
             There was a problem with your form. Please try again.
             {{/if}}</p>
-        <figure>
+        <figure class="top-fig">
             <img src="/img/thomas-gamstaetter-130746.jpg" alt="fried chicken head">
         </figure>
     </div>
