--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login">
-    <figure>
+    <figure class="top-fig">
         <img src="/img/anne-preble-198119.jpg" alt="farm pic">
     </figure>
     <p class="error">{{#if errorMsg}}
