--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,8 +2,8 @@
     <figure>
         <img src="/img/arnaldo-aldana-203173.jpg" alt="fried chicken head">
     </figure>
-    <p class="error">{{#if error}}
-        There was a problem with your form. Please try again.
+    <p class="error">{{#if errorMsg}}
+        There was a problem with your form. {{errorMsg}} Please try again.
         {{/if}}
     </p>
     <p>We are all special cabbages. Tell us a little about yourself: </p>
