--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -1,6 +1,6 @@
 <div class="signees">
 
-    <figure>
+    <figure class="top-fig">
         <img src="/img/luke-syres-223433.jpg" alt="farm pic">
     </figure>
     <h2>We, the undersigned, have pledged to make a difference in our communities by eating local for 1 month!</h2>
