--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,5 +1,5 @@
 <div class="thanks">
-    <figure>
+    <figure class="top-fig">
         <img src="/img/stijn-te-strake-316914.jpg" alt="fried chicken head">
     </figure>
 
