--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="/fonts/font-awesome/css/font-awesome.min.css" >
     <link rel="stylesheet" href="/css/main.css">
 
     <title>Support Local Farms!</title>
@@ -12,7 +13,7 @@
 <body>
     {{>nav}}
     <div class="wrapper">
-        
+
         <section class="body">
             {{{body}}}
         </section>
