--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,8 @@
 <div class="petition">
     <h1>Eat Local!</h1>
+    <a id="more-btn" href="/more">Find Out More</a>
     <h2>Become part of the <span class="emphasis">locavore</span> movement! Join <span class="emphasis">Locavore International!</span></h2>
+
     <div id="carousel">
         <div class="food onscreen"><img src="/img/anne-preble-198119.jpg" alt="market"></div>
         <div class="food"><img src="/img/luke-syres-223433.jpg" alt="chickens"></div>
