--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<div class="petition">
+<div class="petition register">
     <h1>Eat Local!</h1>
     <a id="more-btn" href="/more">Find Out More</a>
     <h2>Become part of the <span class="emphasis">locavore</span> movement! Join <span class="emphasis">Locavore International!</span></h2>
