--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,8 +61,7 @@ nav a:hover {
 h1 {
 	font-family: 'Lobster Two', cursive;
     font-size: 9em;
-    margin: 100px 0 10px 0;
-    line-height: 40px;
+    margin: 50px 0 10px 0;
 	color: white;
 	text-align: center;
 }
@@ -123,6 +122,7 @@ figure,
 
 #carousel {
 	position: absolute;
+    z-index: -3;
 }
 
 .food {
@@ -132,7 +132,7 @@ figure,
 	width: 100%;
     height: 50vh;
     transform: translateX(100%);
-	z-index: -1;
+	z-index: -2;
 }
 
 .food.onscreen {
@@ -160,6 +160,7 @@ img {
 	border-radius: 0px;
 	border: none;
 	box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
+    z-index: -1;
 
 }
 
@@ -193,15 +194,11 @@ button:hover {
     background: #F26419;
 }
 
-/*** register styles ***/
-
-
 /*** petition page styles ***/
-.register h2,
 .petition h2 {
-	margin-top: 31vh;
+	margin-top: 17vh;
     margin-bottom: 10px;
-	color: #363636;
+
 }
 
 #petition-form-div {
@@ -267,10 +264,31 @@ div.inputs {
 	flex-flow: column nowrap;
 	justify-content: flex-start;
 }
+/*** register styles ***/
 
 .register {
 	min-width: 300px;
     text-align: center;
+}
+
+.register h2 {
+    margin-top: 12vh;
+    margin-bottom: 10px;
+}
+
+.register #more-btn {
+    background: #F26419;
+    border: transparent solid 2px;
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+}
+
+.register #more-btn:hover {
+    background: white;
+    border:  #F26419 solid 2px;
+    color:  #F26419;
+    z-index: 2000;
 }
 
 .register p,
