--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -7,7 +7,7 @@
             <img src="/img/thomas-gamstaetter-130746.jpg" alt="fried chicken head">
         </figure>
     </div>
-    <div class="form-div">
+    <div class="right-div">
         <p class="error">{{#if errorMsg}}
             There was a problem with your form. Please try again.
             {{/if}}</p>
