--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,10 @@
             {{{body}}}
         </section>
     </div>
+    <footer>
+        
+    </footer>
+
 
     <script src="/js/script.js" charset="utf-8"></script>
 </body>
