--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,4 +1,4 @@
-<div class="signees">
+<div class="signees above-fold">
 
     <figure class="top-fig">
         <img src="/img/clark-young-135152.jpg" alt="farm pic">
