--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<div class="edit">
+<div class="edit above-fold">
     <div class="side-img">
         <p class="error">{{#if thiswillneverdisplay}}
             There was a problem with your form. Please try again.
