--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="login">
+<div class="login above-fold">
     <figure class="top-fig">
         <img src="/img/anne-preble-198119.jpg" alt="farm pic">
     </figure>
