--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,4 +1,4 @@
-<div class="petition">
+<div class="petition above-fold">
     <h1>Eat Local!</h1>
     <h2>Pledge to eat local for 1 month! Who's in?</h2>
     <div id="carousel">
@@ -14,7 +14,7 @@
             <form method="post" action="/petition">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                 <div class="sig-div">
-            
+
                     <p>Become part of the locavor movement! <br>Sign below to show your commitment to local eating: </p>
                     <p class="error">{{#if error}}
                     There was a problem with your form. Please try again.
