--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,5 @@
-<div class="profile">
-    <figure>
+<div class="profile above-fold">
+    <figure class="top-fig-green">
         <img src="/img/arnaldo-aldana-203173.jpg" alt="fried chicken head">
     </figure>
     <p class="error">{{#if errorMsg}}
