--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,4 +1,4 @@
-<div class="thanks">
+<div class="thanks above-fold">
     <figure class="top-fig">
         <img src="/img/stijn-te-strake-316914.jpg" alt="fried chicken head">
     </figure>
