--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,6 @@ body {
 nav {
 	width: 100%;
 	height: 40px;
-	display: fixed;
 	background: #F26419;
 	border-bottom: 1px #C75215 solid;
 }
@@ -24,6 +23,7 @@ nav {
 .fa {
     color: white;
     padding-right: 5px;
+    font-size: 1.2em;
 }
 nav ul {
 	list-style: none;
