--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,15 +1,40 @@
 <div class="petition above-fold">
-    <h1>Eat Local!</h1>
-    <h2>Pledge to eat local for 1 month! Who's in?</h2>
     <div id="carousel">
-        <div class="food onscreen"><img src="/img/anne-preble-198119.jpg" alt="market"></div>
-        <div class="food"><img src="/img/luke-syres-223433.jpg" alt="chickens"></div>
-        <div class="food"><img src="/img/arnaldo-aldana-203173.jpg" alt="cabbages"></div>
-        <div class="food"><img src="/img/keit-trysh-295253.jpg" alt="root veggies"></div>
-        <div class="food"><img src="/img/peter-feghali-110596.jpg" alt="greens"></div>
-        <div class="food"><img src="/img/rachael-gorjestani-154909.jpg" alt="eggs"></div>
+        <div class="food onscreen">
+            <div class="img-txt">
+                <h2 class="carousel-text">Worried about not having enough in the winter? <br>Make pickles! </h2>
+            </div>
+            <img src="/img/anne-preble-198119.jpg" alt="market"></div>
+        <div class="food">
+            <div class="img-txt">
+                <h2 class="carousel-text">Chickens massaged twice a day and given only mineral water (but not from plastic bottles)</h2>
+            </div>
+            <img src="/img/luke-syres-223433.jpg" alt="chickens"></div>
+        <div class="food">
+            <div class="img-txt">
+                <h2 class="carousel-text">Gluten-free, cruelty-free cabbages </h2>
+            </div>
+            <img src="/img/arnaldo-aldana-203173.jpg" alt="cabbages"></div>
+        <div class="food">
+            <div class="img-txt">
+                <h2 class="carousel-text">Non hydrogenated carrots, turnips, and radishes </h2>
+            </div>
+            <img src="/img/keit-trysh-295253.jpg" alt="root veggies"></div>
+        <div class="food">
+            <div class="img-txt">
+                <h2 class="carousel-text">Hypoallergencic greens</h2>
+            </div>
+            <img src="/img/peter-feghali-110596.jpg" alt="greens"></div>
+        <div class="food">
+            <div class="img-txt">
+                <h2 class="carousel-text">Eggs from heritage breed birds fed a diet of sheeps milk, soy, and hazelnuts </h2>
+            </div>
+            <img src="/img/rachael-gorjestani-154909.jpg" alt="eggs"></div>
     </div>
+
     <div class="under-carousel">
+        <h2>Pledge to eat local for 1 month! Who's in?</h2>
+
         <div id="peition-form-div">
             <form method="post" action="/petition">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
