(Mew) styled text on carousel

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,8 +215,8 @@ button:hover {
     width: 80%;
     margin: 0 auto;
     margin-top: 5vh;
-    font-size: 1.7em;
-    font-family: 'Poppins', sans-serif;
+    font-size: 3.4em;
+    font-family: 'Lobster Two', sans-serif;
 }
 .under-carousel h2 {
 	margin-top: 51vh;
