--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -22,7 +22,7 @@
             <img src="/img/keit-trysh-295253.jpg" alt="root veggies"></div>
         <div class="food">
             <div class="img-txt">
-                <h2 class="carousel-text">Hypoallergencic greens</h2>
+                <h2 class="carousel-text">Hypoallergencic, artisan greens</h2>
             </div>
             <img src="/img/peter-feghali-110596.jpg" alt="greens"></div>
         <div class="food">
