--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,7 +1,7 @@
 <div class="petition register">
     <div class="above-fold">
         <h1>Eat Local!</h1>
-        <a id="more-btn" href="#more">Find Out More</a>
+        <a id="more-btn"  class="btn" href="#more">Find Out More</a>
         <h2>Become part of the <span class="emphasis">locavore</span> movement! Join <span class="emphasis">Locavore International!</span></h2>
 
         <div id="carousel">
@@ -60,4 +60,6 @@
 
     </div>
     <p class="more-p">Local eating creates a virtuous circle of goodness. Buying food from local farmers incentives farmers to plant a greater diversity of crops to feed you and your family.  Talking to the farmer directly means you can ask them about how they care for the animals and the land.  If their customer's care about how food is produced and aminals raised, they will make changes that support the entire ecosystem.</p>
+
+    <a id="signup-btn" class="btn" href="/register">Signup!</a>
 </div>
