--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -59,7 +59,7 @@
         </div>
 
     </div>
-    <p class="more-p">Local eating creates a virtuous circle of goodness. Buying food from local farmers incentives farmers to plant a greater diversity of crops to feed you and your family.  Talking to the farmer directly means you can ask them about how they care for the animals and the land.  If their customer's care about how food is produced and aminals raised, they will make changes that support the entire ecosystem.</p>
+    <p class="more-p">Local eating creates a virtuous circle of goodness. Buying food from local farmers incentives farmers to plant a greater diversity of crops to feed you and your family.  Talking to the farmer directly means you can ask them about how they care for the animals and the land.  If their customers care about how food is produced and animals raised, they will make changes that support the entire ecosystem.</p>
 
     <a id="signup-btn" class="btn" href="/register">Signup!</a>
 </div>
