(Mew) mostly responsive

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -440,7 +440,8 @@ footer {
     }
 
     .register h2 {
-        margin-top: 18vh;
+        /*margin-top: 18vh;*/
+    }
 
     .logo {
         display: none;
